--- a/FullstackCapstone/src/index.css
+++ b/FullstackCapstone/src/index.css
@@ -1,14 +1,300 @@
 body {
   font-family: Georgia, serif;
-  background-color: #f8f8f8;
+  background-color: #3c3fbd;
   margin: 0;
   padding: 0;
 }
 
 .App h1 {
   text-align: center;
-  background-color: rgb(230, 230, 230);
+  color: #c1addb;
+  background-color: #7499f5;
+  border-radius: 50%;
   max-width: 30%;
-  margin-left: 35%;
+  margin-left: 41.5vw;
   margin-bottom: 2%;
+  height: 15vw;
+  width: 15vw;
+  font-size: 75px;
+  vertical-align: middle;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: rotate(-30deg);
+  font-family: fantasy;
   }
+
+  .App h2 {
+    text-align: center;
+    color: #c1addb;
+    background-color: #7499f5;
+    margin-left: 30vw;
+    margin-bottom: 2%;
+    height: 6vw;
+    width: 40vw;
+    font-size: 75px;
+    vertical-align: middle;
+    font-family: fantasy;
+    }
+
+  .albums-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    text-align: center;
+    list-style: none;
+    grid-auto-rows: auto;
+    vertical-align: middle;
+  }
+
+  .albums-list li {
+    width: 90%;
+    height: 90%;
+    background-color: #05897c;
+    margin-bottom: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 1%;
+  }
+
+  .albums-list strong1 {
+   font-size:x-large;
+   font-weight: bold;
+  }
+
+  .albums-list strong2 {
+    font-size: large;
+    margin-bottom: 10px;
+   }
+
+   .albums-list button {
+    width: 3.5vw;
+    height: 3.5vw;
+    margin-bottom: 10px;
+    font-weight: bold;
+    border-radius: 50%;
+    vertical-align: middle;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: rotate(-30deg);
+    font-family: fantasy;
+
+   }
+
+  .nav {
+    text-align: center;
+    margin-bottom: 2%;
+  }
+
+  .nav li {
+    list-style: none;
+    max-width: 10%;
+    margin-left: 43.5%;
+    margin-bottom: 1%;
+    border-style: solid;
+    background-color: #7499f5;
+  }
+
+  .link {
+    align-items: center;
+    align-content: center;
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+    font-size: large;
+    font-family: monospace;
+  }
+
+  .item-details {
+    text-align: center;
+  }
+
+  .item-details h2 {
+    text-align: center;
+    width: 95vw;
+    margin-left: 2.5vw;
+  }
+
+  .item-details h3 {
+    text-align: center;
+    font-family: fantasy;
+    font-size: 3vw;
+  }
+
+  .item-details h5 {
+    text-align: center;
+    font-family: fantasy;
+    font-size: xx-large;
+  }
+
+  .item-details ul {
+    text-align: center;
+    list-style: none;
+    margin-right: 2vw;
+  }
+
+  .item-details button {
+    width: 10vw;
+    height: 10vw;
+    font-size: xx-large;
+    margin-bottom: 10px;
+    font-weight: bold;
+    border-radius: 50%;
+    vertical-align: middle;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: rotate(-30deg);
+    font-family: fantasy;
+    margin-left: 44.5vw;
+   }
+
+
+   .item-details a {
+    font-size: xx-large;
+    margin-bottom: 10px;
+    font-weight: bold;
+    vertical-align: middle;
+    font-family: fantasy;
+    color: black;
+    text-decoration: none;
+    background-color: #b2fc9b;
+   }
+
+   .form1 {
+    text-align: center;
+    width: 20%;
+    background-color: #05897c;
+    margin-bottom: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 1%;
+    margin-left: 39%;
+    font-family: fantasy;
+    font-size: large;
+   }
+   .form1 input {
+    height: 20px;
+   }
+
+   .form1 button {
+    width: 3.5vw;
+    height: 3.5vw;
+
+    font-weight: bold;
+    border-radius: 50%;
+    vertical-align: middle;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: rotate(-30deg);
+    font-family: fantasy;
+    margin-top: 15px;
+
+   }
+
+   .form2 {
+    text-align: center;
+    width: 20%;
+    background-color: #05897c;
+    margin-bottom: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 1%;
+    margin-left: 39%;
+    font-family: fantasy;
+    font-size: large;
+   }
+   .form2 input {
+    height: 20px;
+   }
+
+   .form2 button {
+    width: 3.5vw;
+    height: 3.5vw;
+
+    font-weight: bold;
+    border-radius: 50%;
+    vertical-align: middle;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: rotate(-30deg);
+    font-family: fantasy;
+    margin-top: 15px;
+
+   }
+
+   .form3 {
+    text-align: center;
+    width: 20%;
+    background-color: #05897c;
+    margin-bottom: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 1%;
+    margin-left: 39%;
+    font-family: fantasy;
+    font-size: large;
+   }
+   .form3 input {
+    height: 20px;
+   }
+
+   .form3 button {
+    width: 3.5vw;
+    height: 3.5vw;
+
+    font-weight: bold;
+    border-radius: 50%;
+    vertical-align: middle;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: rotate(-30deg);
+    font-family: fantasy;
+    margin-top: 15px;
+
+   }
+
+   .form4 {
+    text-align: center;
+    width: 20%;
+    background-color: #05897c;
+    margin-bottom: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 1%;
+    margin-left: 39%;
+    font-family: fantasy;
+    font-size: large;
+   }
+   .form4 input {
+    height: 20px;
+   }
+
+   .form4 button {
+    width: 3.5vw;
+    height: 3.5vw;
+
+    font-weight: bold;
+    border-radius: 50%;
+    vertical-align: middle;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: rotate(-30deg);
+    font-family: fantasy;
+    margin-top: 15px;
+
+   }
